# Frontier-Exploration-with-a-prior

./: .gitignore  Dockerfile  LICENSE  README.md  conftest.py  dev.sh  get-pip.py  req.txt  requirements.txt  setup.py
src/ROS/create_autonomy/ca_bringup/: CMakeLists.txt  README.md  package.xml
src/ROS/create_autonomy/ca_bringup/launch/: complete.launch  minimal.launch
src/ROS/create_autonomy/ca_bringup/scripts/: ignore_pkgs.sh  remote_access_config.sh  robot_network_config.sh
src/ROS/create_autonomy/ca_bringup/scripts/rules/: roomba.rules  rplidar.rules
src/ROS/create_autonomy/ca_bringup/scripts/udev/: create_rules.sh  delete_rules.sh
src/ROS/create_autonomy/ca_bumper2pc/: CMakeLists.txt  package.xml
src/ROS/create_autonomy/ca_bumper2pc/include/ca_bumper2pc/: ca_bumper2pc.hpp
src/ROS/create_autonomy/ca_bumper2pc/launch/: standalone.launch
src/ROS/create_autonomy/ca_bumper2pc/src/: ca_bumper2pc.cpp
src/ROS/create_autonomy/ca_dashboard/: CMakeLists.txt  package.xml  setup.py
src/ROS/create_autonomy/ca_dashboard/launch/: dashboard.launch
src/ROS/create_autonomy/ca_dashboard/plugins/: plugin.xml
src/ROS/create_autonomy/ca_dashboard/scripts/: create_dashboard
src/ROS/create_autonomy/ca_dashboard/src/ca_dashboard/: battery.py  breaker.py  dashboard.py
src/ROS/create_autonomy/ca_driver/: CMakeLists.txt  package.xml
src/ROS/create_autonomy/ca_driver/config/: default.yaml
src/ROS/create_autonomy/ca_driver/include/create_driver/: create_driver.h
src/ROS/create_autonomy/ca_driver/launch/: create_2.launch
src/ROS/create_autonomy/ca_driver/src/: create_driver.cpp
src/ROS/create_autonomy/ca_gazebo/: CMakeLists.txt  README.md  package.xml
src/ROS/create_autonomy/ca_gazebo/config/: battery.yaml
src/ROS/create_autonomy/ca_gazebo/include/ca_gazebo/: cliff_msg_publisher.h  create_battery_plugin.h  create_bumper_plugin.h  create_cliff_plugin.h  create_diff_drive.h  create_imu_plugin.h  create_virtual_wall_plugin.hh  traffic_light_plugin.h  virtual_wall_detector.h  world_time_publisher.h
src/ROS/create_autonomy/ca_gazebo/launch/: create_autorace.launch  create_cave.launch  create_cooperative_two_rooms.launch  create_corridor.launch  create_elevated.launch  create_empty_world.launch  create_house.launch  create_maze.launch  create_playground.launch  create_playpen.launch  create_restaurant.launch  create_servicesim.launch  create_small_house.launch  create_stage_1.launch  create_stage_2.launch  create_sweet_house_3.launch  create_sweet_house_5.launch  create_tea_shop.launch  create_tunnel_qual.launch  create_two_floors_house.launch  create_warehouse.launch  demo.launch
src/ROS/create_autonomy/ca_gazebo/launch/include/: spawn_create.launch  spawn_multirobot.launch  spawn_virtual_wall.launch
src/ROS/create_autonomy/ca_gazebo/scripts/: battery_consumer  set_properties
src/ROS/create_autonomy/ca_gazebo/src/: cliff_msg_publisher.cpp  create_battery_plugin.cpp  create_bumper_plugin.cpp  create_cliff_plugin.cpp  create_diff_drive.cpp  create_imu_plugin.cpp  create_virtual_wall_plugin.cpp  model_pose_publisher_plugin.cpp  traffic_light_plugin.cpp  virtual_wall_detector.cpp  world_time_publisher.cpp
src/ROS/create_autonomy/ca_gazebo/test/: CMakeLists.txt  create_tests.test
src/ROS/create_autonomy/ca_gazebo/test/params/: hz.yaml  static.yaml  tf.yaml
src/ROS/create_autonomy/ca_gazebo/test/scripts/: create_tests.py  hztest.py  static.py  tf_checker.py
src/ROS/create_autonomy/ca_gazebo/worlds/: autorace.world  cave.world  elevated.world  house.world  maze.world  playpen.world  restaurant.world  servicesim.world  stage_1.world  stage_2.world  sweet_house_3.world  sweet_house_5.world  tea_shop.world  tunnel_qual.world  two_floors_house.world  two_rooms.world  warehouse.world
src/ROS/create_autonomy/ca_node/: CMakeLists.txt  package.xml
src/ROS/create_autonomy/ca_node/launch/: create_2.launch  state_machine.launch
src/ROS/create_autonomy/ca_node/plugins/: nodelet_plugins.xml
src/ROS/create_autonomy/ca_node/scripts/: load_calib.py  state_machine.py
src/ROS/create_autonomy/ca_node/src/nodelet/: CMakeLists.txt  ca_nodelet.cpp
src/ROS/create_autonomy/ca_tools/: CMakeLists.txt  package.xml
src/ROS/create_autonomy/ca_tools/config/: key_teleop.yaml  log710.yaml  xbox360.yaml
src/ROS/create_autonomy/ca_tools/launch/: joy_teleop.launch  keyboard_teleop.launch  move_square.launch  rviz.launch
src/ROS/create_autonomy/ca_tools/rviz/: config.rviz
src/ROS/create_autonomy/ca_tools/scripts/: key_teleop.py  move_square.py  turtlebot_teleop_key
src/ROS/create_autonomy/navigation/ca_behavior_tree/: CMakeLists.txt  README.md  package.xml
src/ROS/create_autonomy/navigation/ca_behavior_tree/config/: behavior_tree.xml  robomate.xml
src/ROS/create_autonomy/navigation/ca_behavior_tree/launch/: bt.launch  robomate.launch
src/ROS/create_autonomy/navigation/ca_behavior_tree/src/: main.cpp
src/ROS/create_autonomy/navigation/ca_cartographer/: CMakeLists.txt  package.xml
src/ROS/create_autonomy/navigation/ca_cartographer/config/: localization_2d.lua  mapping_2d.lua
src/ROS/create_autonomy/navigation/ca_control/: CMakeLists.txt  README.md  package.xml
src/ROS/create_autonomy/navigation/ca_control/config/: create_2_control.yaml
src/ROS/create_autonomy/navigation/ca_hector/: CMakeLists.txt  package.xml
src/ROS/create_autonomy/navigation/ca_localization/: CMakeLists.txt  package.xml
src/ROS/create_autonomy/navigation/ca_mapping/: CMakeLists.txt  package.xml
src/ROS/create_autonomy/navigation/ca_mapping_exploration/: CMakeLists.txt  package.xml
src/ROS/create_autonomy/navigation/ca_move_base/: CMakeLists.txt  package.xml
src/ROS/create_autonomy/navigation/ca_room_segmentation/: CMakeLists.txt  README.md  package.xml  setup.py
src/ROS/create_autonomy/navigation/ca_safety_controller/: CMakeLists.txt  package.xml
src/ROS/create_autonomy/navigation/ca_slam/: CMakeLists.txt  package.xml
src/ROS/create_autonomy/navigation/ca_swarm/: CMakeLists.txt  package.xml
src/ROS/create_autonomy/navigation/ca_vel_mux/: CMakeLists.txt  README.md  package.xml
(+290 files in other folders)
