<?xml version="1.0"?>
<package format="2">
  <name>ca_bringup</name>
  <version>0.0.0</version>
  <description>ca_bringup spawns the nodes that the real robot uses</description>

  <maintainer email="emiliano.borghi@gmail.com">Emiliano Borghi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>ca_camera</exec_depend>
  <exec_depend>ca_control</exec_depend>
  <exec_depend>ca_description</exec_depend>
  <exec_depend>ca_imu</exec_depend>
  <exec_depend>ca_localization</exec_depend>
  <exec_depend>ca_move_base</exec_depend>
  <exec_depend>ca_node</exec_depend>
  <exec_depend>ca_slam</exec_depend>
  <exec_depend>ca_tools</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>nodelet</exec_depend>

  <test_depend>roslaunch</test_depend>

</package>
