<?xml version="1.0"?>
<package format="2">
  <name>ca_node</name>
  <version>1.1.0</version>
  <description>ROS driver for iRobot Create 2, based on libcreate</description>

  <maintainer email="jperron@sfu.ca">Jacob Perron</maintainer>

  <license>BSD</license>

  <author email="jperron@sfu.ca">Jacob Perron</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ca_driver</build_depend>
  <build_depend>ecl_threads</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>

  <build_export_depend>ca_driver</build_export_depend>
  <build_export_depend>ecl_threads</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>smach_ros</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>ca_driver</exec_depend>
  <exec_depend>ecl_threads</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>smach_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <nodelet plugin="${prefix}/plugins/nodelet_plugins.xml" />
  </export>
</package>
