<?xml version="1.0"?>
<package format="2">
  <name>ca_control</name>
  <version>0.0.0</version>
  <description>Create control pkg, intended for using with Create2</description>

  <maintainer email="serraramiro@ekumenlabs.com">Ramiro Serra</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_manager</depend>
  <depend>libcreate</depend>

  <exec_depend>ca_driver</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <test_depend>roslint</test_depend>

</package>
